@@ -2,10 +2,10 @@ INCLUDES = \
 	-DGNOMELOCALEDIR=\""$(datatdir)/locals"\" \
 	-I$(top_srcdir)/src/lib -I$(includedir) $(GNOME_INCLUDEDIR)
 
-bin_PROGRAMS = \
-	gdf-event-server
 
-gdf_event_server_SOURCES =					\
+lib_LTLIBRARIES=libgdf-event-server.la
+
+libgdf_event_server_la_SOURCES =					\
 	gdf-event-server.c					\
 	gdf-event-server.h					\
 	generic-factory-impl.c					\
@@ -13,5 +13,5 @@ gdf_event_server_SOURCES =					\
 	event-channel-impl.c					\
 	event-channel.h
 
-gdf_event_server_LDADD =					\
-	../lib/libgdf.la
+#libgdf_event_server_la_LIBADD =					\
+#	../lib/libgdf.la
